Update new paper

--- a/research.html
+++ b/research.html
@@ -102,7 +102,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (106)</span></h1></td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (107)</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -215,7 +215,7 @@
 			
 				<tr><td>
 					<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-					<img src="images/6.png" height="15"><img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/6.png" height="15"><img src="images/3.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 				</td></tr>
@@ -293,6 +293,15 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
 				</td></tr>
 			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Group Activity Recognition in Crowded Scenes Using Multi-Stage Feature Optimization and ST-GCN-LSTM Networks.</i> Alnusayri, M., Xue, T., Kamal, S., Almujally, N. A., Alnowaiser, K., Jalal, A.*, and Liu, H.* (2026). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+					<!--<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					-->
+				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Intelligent Human Interaction Recognition with Multi-Modal Feature Extraction and Bidirectional LSTM.</i> Azhar, M. H., Wu, Y., Almujally, N. A., Alharbi S. S., Algarni, A., Jalal, A.*, and Liu, H.* (co-first) (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
@@ -1125,46 +1134,36 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">General Chair</td>
+					<td align="center">General Chair/Co-Chair<br>(Co-)GC</td>
 					<td>
+						&#9679; <a href="https://www.is-aii.org/committees/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2025 – International Symposium on Artificial Intelligence Innovations, Guiyang<br>
+						&#9679; <a href="https://www.icairsa.net/?page_id=9629" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA.png" height="15"></a> 2025 – International Conference on Artificial Intelligence and Remote Sensing Applications, Changsha<br>
+						&#9679; <a href="https://www.is-aii.org/committees-2026/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2026 – 2<sup>nd</sup> International Symposium on Artificial Intelligence Innovations, Sanya<br>
 						&#9679; <a href="https://www.icairsa.net/committee-2026/" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA.png" height="15"></a> 2026 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Remote Sensing Applications, Nanning<br>
 					</td>
 				</tr>
 				<tr>
-					<td align="center">General Co-Chair</td>
-					<td>
-						&#9679; <a href="https://www.is-aii.org/committees/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2025 – International Symposium on Artificial Intelligence Innovations, Guiyang<br>
-						&#9679; <a href="https://www.icairsa.net/?page_id=9629" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA.png" height="15"></a> 2025 – International Conference on Artificial Intelligence and Remote Sensing Applications, Changsha<br>
-						&#9679; <a href="https://www.is-aii.org/committees-2026/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2026 – 2<sup>nd</sup> International Symposium on Artificial Intelligence Innovations, Sanya
-					</td>
-				</tr>
-				<tr>
-					<td align="center">Executive Chair（EC）</td>
+					<td align="center">Executive Chair<br>EC</td>
 					<td>
 						&#9679; <a href="https://imic.nuist.edu.cn/xsjl/aim2025.htm" target="_blank" rel="noopener noreferrer">AIM</a> 2025 – International Symposium on AI in Medicine, Nanjing
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Technical Program Chair (TPC)</td>
+					<td align="center">Technical Program Chair/<br>Co-Chair<br>(Co-)TPC</td>
 					<td>
+						&#9679; <img src="images/ArtInHCI.png" height="15" class="pop5"> 2024 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, Kunming<br>
 						&#9679; <a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="15" class="pop5"></a> 2025 – 3<sup>rd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, Nanning
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Program Co-Chair (Co-PC)</td>
+					<td align="center">Program Co-Chair<br>Co-PC</td>
 					<td>
 						&#9679; <a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="12"></a> – 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="12"></a>), Rome, Itaty<br>
 						&#9679; <a href="https://biosignals.scitevents.org/?y=2026" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2026.png" height="12"></a> – 19<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2026" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2026.png" height="12"></a>), Marbella, Spain
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Technical Program Co-Chair (Co-TPC)</td>
-					<td>
-						&#9679; <img src="images/ArtInHCI.png" height="15" class="pop5"> 2024 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, Kunming
-					</td>
-				</tr>
-				<tr>
-					<td align="center">Area Chair (AC)</td>
+					<td align="center">Area Chair<br>AC</td>
 					<td>
 						&#9679; <a href="https://e-nns.org/icann2024/organization/program-committee/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="15" class="pop5"></a> – 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
 						&#9679; <a href="https://ceii.asia/2024/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="15" class="pop5"></a> – 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, Singapore
@@ -1184,7 +1183,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Session Chair</td>
+					<td align="center">Session Chair<br>SC</td>
 					<td>
 						&#9679; <a href="https://healthinf.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF22.png" height="12"></a> – 15<sup>th</sup> International Conference on Health Informatics, Vienna, Austria<br>
 						&#9679; <a href="https://sigmap.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/SIGMAP22.png" height="12"></a> – 19<sup>th</sup> International Conference on Signal Processing and Multimedia Applications, Lisbon, Portugal<br>
@@ -2313,7 +2312,7 @@
 				
 				<tr>
 					<td align="center">
-						<img src="images/students/Male.png" width="150" class="round"></a><br>
+						<img src="images/students/吴炯樟.jpg" width="150" class="round"></a><br>
 						&copy;<b>吴炯樟</b>
 					</td>
 					<td>
