--- a/researchcn.html
+++ b/researchcn.html
@@ -104,7 +104,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（106）</span></h1> SCI总影响因子=258.9，其中一作/通讯总影响因子=224.1</td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（107）</span></h1> SCI总影响因子=260.6，其中一作/通讯总影响因子=225.8</td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -217,7 +217,7 @@
 			
 				<tr><td>
 					<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-					<img src="images/6.png" height="15"><img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/6.png" height="15"><img src="images/3.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 				</td></tr>
@@ -295,6 +295,15 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
 				</td></tr>
 			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Group Activity Recognition in Crowded Scenes Using Multi-Stage Feature Optimization and ST-GCN-LSTM Networks.</i> Alnusayri, M., Xue, T., Kamal, S., Almujally, N. A., Alnowaiser, K., Jalal, A.*, and Liu, H.* (2026). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+					<!--<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					-->
+				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Intelligent Human Interaction Recognition with Multi-Modal Feature Extraction and Bidirectional LSTM.</i> Azhar, M. H., Wu, Y., Almujally, N. A., Alharbi S. S., Algarni, A., Jalal, A.*, and Liu, H.* (co-first) (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
@@ -1127,17 +1136,12 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">国际学术会议<br>主席<br>General Chair</td>
-					<td>
-						&#9679; <a href="https://www.icairsa.net/committee-2026/" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA.png" height="15"></a> 2026 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Remote Sensing Applications, 中国南宁<br>
-					</td>
-				</tr>
-				<tr>
-					<td align="center">国际学术会议<br>联合主席<br>General Co-Chair</td>
+					<td align="center">国际学术会议<br>主席/联合主席<br>General (Co-)Chair</td>
 					<td>
 						&#9679; <a href="https://www.is-aii.org/committees/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2025 – International Symposium on Artificial Intelligence Innovations, 中国贵阳<br>
 						&#9679; <a href="https://www.icairsa.net/?page_id=9629" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA.png" height="15"></a> 2025 – International Conference on Artificial Intelligence and Remote Sensing Applications, 中国长沙<br>
-						&#9679; <a href="https://www.is-aii.org/committees-2026/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2026 – 2<sup>nd</sup> International Symposium on Artificial Intelligence Innovations, 中国三亚
+						&#9679; <a href="https://www.is-aii.org/committees-2026/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2026 – 2<sup>nd</sup> International Symposium on Artificial Intelligence Innovations, 中国三亚<br>
+						&#9679; <a href="https://www.icairsa.net/committee-2026/" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA.png" height="15"></a> 2026 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Remote Sensing Applications, 中国南宁<br>
 					</td>
 				</tr>
 				<tr>
@@ -1147,8 +1151,9 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">国际学术会议<br>技术委员会主席<br>Technical Program Chair</td>
+					<td align="center">国际学术会议<br>技术委员会主席/<br>联合主席<br>Technical Program Chair/Co-Chair</td>
 					<td>
+						&#9679; <img src="images/ArtInHCI.png" height="15" class="pop5"> 2024 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, 中国昆明<br>
 						&#9679; <a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="15" class="pop5"></a> 2025 – 3<sup>rd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, 中国南宁
 					</td>
 				</tr>
@@ -1157,12 +1162,6 @@
 					<td>
 						&#9679; <a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="12"></a> – 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="12"></a>), 意大利罗马<br>
 						&#9679; <a href="https://biosignals.scitevents.org/?y=2026" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2026.png" height="12"></a> – 19<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2026" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2026.png" height="12"></a>), 西班牙马贝拉
-					</td>
-				</tr>
-				<tr>
-					<td align="center">国际学术会议<br>技术委员会联合主席<br>Technical Program<br>Co-Chair</td>
-					<td>
-						&#9679; <img src="images/ArtInHCI.png" height="15" class="pop5"> 2024 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, 中国昆明
 					</td>
 				</tr>
 				<tr>
@@ -2275,7 +2274,7 @@
 				
 				<tr>
 					<td align="center">
-						<img src="images/students/Male.png" width="150" class="round"></a><br>
+						<img src="images/students/吴炯樟.jpg" width="150" class="round"></a><br>
 						&copy;<b>吴炯樟</b>
 					</td>
 					<td>
