update student info

--- a/research.html
+++ b/research.html
@@ -2162,7 +2162,7 @@
 				<tr>
 					<td align="center">
 						<img src="images/students/何博宇.jpg" width="150" class="round"></a><br>
-						&copy;<b>Boyu, He</b>
+						&copy;<b>Boyu He</b>
 					</td>
 					<td>
 						Bachelor Thesis 2025 @ Nanjing, China<br>
@@ -2174,150 +2174,124 @@
 
 				<tr>
 					<td align="center">
-						<img src="images/students/陶元兆.jpg" width="150" class="round"></a><br>
-						&copy;<b>陶元兆</b>
-					</td>
-					<td>
-						本科毕业 2025 @ 中国南京<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 股价预测
-						<br><br>
-						&rarr; 工业界 @ 安徽天长
-					</td>
-				</tr>
-
-				<tr>
-					<td align="center">
-						<img src="images/students/何博宇.jpg" width="150" class="round"></a><br>
-						&copy;<b>何博宇</b>
-					</td>
-					<td>
-						本科毕业 2025 @ 中国南京<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 网站漏洞检测
-						<br><br>
-						&rarr; 工业界 @ 安徽合肥
-					</td>
-				</tr>
-
-				<tr>
-					<td align="center">
 						<img src="images/students/张新宇.jpg" width="150" class="round"></a><br>
-						&copy;<b>张新宇</b>
+						&copy;<b>Xinyu Zhang</b>
 					</td>
 					<td>
 						<br>
-						本科毕业 2025 @ 中国南京<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 手机端电商产品推荐系统
+						Bachelor Thesis 2025 @ Nanjing, China<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; E-commerce product recommendation system for mobile devices
 						<br><br>
-						&rarr; 硕士研究生 @ 成都电子科技大学
+						&rarr; Master student @ University of Electronic Science and Technology of China, Chengdu
 					</td>
 				</tr>
 
 				<tr>
 					<td align="center">
 						<img src="images/students/李小帅.jpg" width="150" class="round"></a><br>
-						&copy;<b>李小帅</b>
+						&copy;<b>Xiaoshuai Li</b>
 					</td>
 					<td>
-						本科毕业 2025 @ 中国南京<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 人脸检测和定位
+						Bachelor Thesis 2025 @ Nanjing, China<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Face detection and localization
 						<br><br>
-						&rarr; 硕士研究生
+						&rarr; Master student
 					</td>
 				</tr>
 
 				<tr>
 					<td align="center">
 						<img src="images/students/王杰.jpg" width="150" class="round"></a><br>
-						&copy;<b>王杰</b>
+						&copy;<b>Jie Wang</b>
 					</td>
 					<td>
-						本科毕业 2025 @ 中国南京<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 交通工具检浊
+						Bachelor Thesis 2025 @ Nanjing, China<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Detection of Vehicles
 						<br><br>
-						&rarr; 工业界
+						&rarr; Industry
 					</td>
 				</tr>
 
 				<tr>
 					<td align="center">
 						<img src="images/students/蒋龙腾.jpg" width="150" class="round"></a><br>
-						&copy;<b>蒋龙腾</b>
+						&copy;<b>Longteng Jiang</b>
 					</td>
 					<td>
-						本科毕业 2025 @ 中国南京<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 商业信息可视化
+						Bachelor Thesis 2025 @ Nanjing, China<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679;  Business information visualization
 						<br><br>
-						&rarr; 工业界
+						&rarr; Developer @ Sunline Tech, Hangzhou, Zhejiang
 					</td>
 				</tr>
 
 				<tr>
 					<td align="center">
 						<img src="images/students/孙菱忆.jpg" width="150" class="round"></a><br>
-						&copy;<b>孙菱忆</b>
+						&copy;<b>Linyi Sun</b>
 					</td>
 					<td>
-						科研助理和研究小组召集人<br>
-						江苏省人民医院合作科研对接人<br>
-						生物医学工程硕士研究生<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 主研项目：空蝶鞍病理学AI研究
-					</td>
+						Research assistant and team coordinator<br>
+						Scientific research liaison for collaboration with Jiangsu Provincial People's Hospital<br>
+						Master thesis in progress<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Pathology of empty sella
 				</tr>
 
 				<tr>
 					<td align="center">
 						<img src="images/students/王翊.jpg" width="150" class="round"></a><br>
-						&copy;<b>王翊</b>
+						&copy;<b>Yi Wang</b>
 					</td>
 					<td>
-						国电南自企业合作产学研对接人<br>
-						人工智能士研究生<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 主研项目：基于电压加电流时序信号分析的配电网小电流接地故障智能诊断
+						Liaison for industry-academia collaboration at Guodian Nanjing Automation Co., Ltd.<br>
+						Master thesis in progress<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Small-current grounding faults detection based on time-series signals
 					</td>
 				</tr>
 
 				<tr>
 					<td align="center">
 						<img src="images/students/陆洋.jpg" width="150" class="round"></a><br>
-						&copy;<b>陆洋</b>
+						&copy;<b>Yang Lu</b>
 					</td>
 					<td>
-						生物医学工程硕士研究生<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 主研项目：嗓音女性化术前后数据分析和智能手术建议
+						Liaison for industry-academia collaboration at Shinsson Co., Ltd.<br>
+						Master thesis in progress<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Optimizing fetal heart monitoring
 					</td>
 				</tr>
 
 				<tr>
 					<td align="center">
 						<img src="images/students/孙永超.jpg" width="150" class="round"></a><br>
-						&copy;<b>孙永超</b>
+						&copy;<b>Yongchao Sun</b>
 					</td>
 					<td>
-						南京同仁医院合作科研对接人
-						生物医学工程硕士研究生<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 主研项目：艺术嗓音AI研究
+						Research collaboration liaison at Nanjing Tongren Hospital<br>
+						Master thesis in progress<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Artistic vocalization
 					</td>
 				</tr>
 
 				<tr>
 					<td align="center"> 
 						<img src="images/students/周海龙.jpg" width="150" class="round"></a><br>
-						&copy;<b>周海龙</b>
+						&copy;<b>Haolong Zhou</b>
 					</td>
 					<td>
-						生物医学工程硕士研究生<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 主研项目：穿戴式电力运维人员安全保障系统
+						Master thesis in progress<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Wearable safety assurance system for power operation personnel
 					</td>
 				</tr>
 				
 				<tr>
 					<td align="center">
 						<img src="images/students/吴炯樟.jpg" width="150" class="round"></a><br>
-						&copy;<b>吴炯樟</b>
+						&copy;<b>Jingzhang Wu</b>
 					</td>
 					<td>
-						本科毕设进行<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 主研项目：基于电压加电流时序信号分析的配电网小电流接地故障智能诊断
+						Bachelor thesis in progress<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Small-current grounding faults detection
 					</td>
 				</tr>
 
