--- a/researchcn.html
+++ b/researchcn.html
@@ -2194,7 +2194,7 @@
 					</td>
 					<td>
 						本科毕业 2025 @ 中国南京<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 交通工具检浊
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 交通工具检测
 						<br><br>
 						&rarr; 工业界
 					</td>
@@ -2209,7 +2209,7 @@
 						本科毕业 2025 @ 中国南京<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 商业信息可视化
 						<br><br>
-						&rarr; 工业界
+						&rarr; 软件工程师 @ 长亮科技，浙江杭州
 					</td>
 				</tr>
 
@@ -2244,8 +2244,9 @@
 						&copy;<b>陆洋</b>
 					</td>
 					<td>
+						信臣有限公司合作产学研对接人<br>
 						生物医学工程硕士研究生<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 主研项目：嗓音女性化术前后数据分析和智能手术建议
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 主研项目：胎心检测优化
 					</td>
 				</tr>
 
@@ -2255,7 +2256,7 @@
 						&copy;<b>孙永超</b>
 					</td>
 					<td>
-						南京同仁医院合作科研对接人
+						南京同仁医院合作科研对接人<br>
 						生物医学工程硕士研究生<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 主研项目：艺术嗓音AI研究
 					</td>
