add one paper link

--- a/research.html
+++ b/research.html
@@ -296,7 +296,8 @@
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Group Activity Recognition in Crowded Scenes Using Multi-Stage Feature Optimization and ST-GCN-LSTM Networks.</i> Alnusayri, M., Xue, T., Kamal, S., Almujally, N. A., Alnowaiser, K., Jalal, A.*, and Liu, H.* (2026). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
-					<!--<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
@@ -305,24 +306,26 @@
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Intelligent Human Interaction Recognition with Multi-Modal Feature Extraction and Bidirectional LSTM.</i> Azhar, M. H., Wu, Y., Almujally, N. A., Alharbi S. S., Algarni, A., Jalal, A.*, and Liu, H.* (co-first) (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
-					<!--<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 					-->
 				</td></tr>
+				
 				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Transformer-Driven Multimodal for Human-Object Detection and Recognition for Intelligent Robotic Surveillance.</i> Ullah, A. A., Wu, Y., Najam S., Almujally, N. A., Jalal, A.*, and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
 					<!--
-						<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;
 					-->
+					<a href="https://www.semanticscholar.org/paper/Transformer-Driven-Multimodal-for-Human-Object-and-Ullah-Wu/66a5a38d8a573c61b1dd9a80a4fe0089459b8bdd" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/399086141_Transformer-Driven_Multimodal_for_Human-Object_Detection_and_Recognition_for_Intelligent_Robotic_Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/cmc/online/detail/25400" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmc.2025.072508" target="_blank" rel="noopener noreferrer">10.32604/cmc.2025.072508</a>
 				</td></tr>
-			
-				<tr><td>
+			W	<tr><td>
 					<i>Machine Learning-Assisted Parametric Analysis and Multi-Criteria Optimization of Building Performance: A Case Study on Indoor Environmental Quality and Energy Efficiency.</i> Liu, H.*, Wu, Y., Xue, T., Du, Zhe., Xu, J.*, Jiang, T.* (2026). Energy Conversion and Management, 349:120825. Elsevier. ISSN: 0196-8904.<br>
 					<a href="https://scholar.google.com/scholar?q=Machine+Learning-Assisted+Parametric+Analysis+and+Multi-Criteria+Optimization+of+Building+Performance%3A+A+Case+Study+on+Indoor+Environmental+Quality+and+Energy+Efficiency" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Machine-learning-assisted-parametric-analysis-and-A-Liu-Wu/5c1d49d1bdb94d06d36f9adc17c903d92f79b035" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -335,9 +338,6 @@
 					<a href="https://scholar.google.com/scholar?q=SiWformer%3A+Multi-Scale+Feature+Fusion+via+Discrete+Wavelet+Transformand+Vision+Transformer" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/SiWformer%3A-multi-scale-feature-fusion-via-discrete-Ahmed-Wu/92d6ba98bd48b75cfb7e571ef94ca8408e7eeed0" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/398231913_SiWformer_multi-scale_feature_fusion_via_discrete_wavelet_transform_and_vision_transformer_SiWformer_Multi-Scale_Feature_Fusion_via_Discrete_WaveletM_W_Ahmed_et_al" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/lstm-mora-melody-accompaniment-classification-of-midi-tracks/50008576" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
-					-->
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/article/10.1007/s11760-025-04894-y" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/s11760-025-04894-y" target="_blank" rel="noopener noreferrer">10.1007/s11760-025-04894-y</a>
 				</td></tr>
