--- a/research.html
+++ b/research.html
@@ -1264,11 +1264,12 @@
 				</tr>
 				<tr>
 					<td align="center">
-						Members of Professional and Academic Associations
+						Member of Professional and Academic Associations
 					</td>
 					<td>
-						&#9679; Artificial Intelligence Committee, Jiangsu Electrotechnical Association</br>
-						&#9679; Nanjing European American Alumni Association
+						&#9679; Member of the Artificial Intelligence Committee, Jiangsu Electrotechnical Association</br>
+						&#9679; Director, Chinese Arts-Medicine Association (CAMA)</br>
+						&#9679; Member, Nanjing European American Alumni Association
 					</td>
 				</tr>
 			</table></td></tr>
