--- a/researchcn.html
+++ b/researchcn.html
@@ -1254,6 +1254,7 @@
 					</td>
 					<td>
 						&#9679; 江苏省电工技术学会人工智能专业委员会委员</br>
+						&#9679; 中国艺术医学协会理事</br>
 						&#9679; 南京市欧美同学会会员
 					</td>
 				</tr>
