--- a/researchcn.html
+++ b/researchcn.html
@@ -344,7 +344,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/s11760-025-04894-y" target="_blank" rel="noopener noreferrer">10.1007/s11760-025-04894-y</a>
 				</td></tr>
 				<tr><td>
-					<i>Novel Quantum-Integrated CNN Model for Improved Human Activity Recognition in Smart Surveillance.</i> Bukht, T. F. N., Wu, Y., Almujally, N. A., AItarbi, S. S., Rahman, H., Jalal, A.*, and Liu, H.* (2025). Computer Modeling in Engineering & Sciences. Tech Science Press. ISSN: 1526-1492.<br>
+					<i>Novel Quantum-Integrated CNN Model for Improved Human Activity Recognition in Smart Surveillance.</i> Bukht, T. F. N., Wu, Y., Almujally, N. A., AItarbi, S. S., Rahman, H., Jalal, A.*, and Liu, H.* (2025). Computer Modeling in Engineering & Sciences, 145(3):4013-4036. Tech Science Press. ISSN: 1526-1492.<br>
 					<a href="https://scholar.google.com/scholar?q=Novel+Quantum-Integrated+CNN+Model+for+Improved+Human+Activity+Recognition+in+Smart+Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Novel-Quantum-Integrated-CNN-Model-for-Improved-in-Bukht-Wu/07f862583679932990f0036bf07f066138a221b3" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/398146866_Novel_Quantum-Integrated_CNN_Model_for_Improved_Human_Activity_Recognition_in_Smart_Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -352,7 +352,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmes.2025.071850" target="_blank" rel="noopener noreferrer">10.32604/cmes.2025.071850</a>
 				</td></tr>
 				<tr><td>
-					<i>Dynamic Graph Neural Networks for UAV-Based Group Activity Recognition in Structured Team Sports.</i> Zahra, I., Wu, Y., Alhasson, H. F., Alharbi, S. S., Aljuaid, H., Jalal, A.*, Liu, H.* (co-first) (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
+					<i>Dynamic Graph Neural Networks for UAV-Based Group Activity Recognition in Structured Team Sports.</i> Zahra, I., Wu, Y., Alhasson, H. F., Alharbi, S. S., Aljuaid, H., Jalal, A.*, Liu, H.* (co-first) (2025). Frontiers in Neurorobotics, 19:1631998. ISSN: 1662-5218.<br>
 					<a href="https://scholar.google.com/scholar?q=Dynamic+graph+neural+networks+for+UAV-based+group+activity+recognition+in+structured+team+sports" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Dynamic-graph-neural-networks-for-UAV-based-group-Zahra-Wu/ab39587e4ea2d831abb3d923fe59e91f6758c6b7" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/395377468_Dynamic_graph_neural_networks_for_UAV-based_group_activity_recognition_in_structured_team_sports" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -368,7 +368,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1631910" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1631910</a>
 				</td></tr>
 				<tr><td>
-					<i>Aerial Images for Intelligent Vehicle Detection and Classification via YOLOv11 and Deep Learner.</i> Mujtaba, G., Liu, W., Alshehri, M., AlQahtani, Y., Almujally, N. A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+					<i>Aerial Images for Intelligent Vehicle Detection and Classification via YOLOv11 and Deep Learner.</i> Mujtaba, G., Liu, W., Alshehri, M., AlQahtani, Y., Almujally, N. A., and Liu, H.* (2025). Computer, Materials & Continua, 86(1):1-19. Tech Science Press. ISSN: 1546-2218.<br>
 					<a href="https://scholar.google.com/scholar?q=Aerial+Images+for+Intelligent+Vehicle+Detection+and+Classification+via+YOLOv11+and+Deep+Learner" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Aerial-Images-for-Intelligent-Vehicle-Detection-and-Mujtaba-Liu/331f9796928eb3093f64ec5622ef3c1d06af89d4" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/396723505_Aerial_Images_for_Intelligent_Vehicle_Detection_and_Classification_via_YOLOv11_and_Deep_Learner" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -392,7 +392,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.energy.2025.137350" target="_blank" rel="noopener noreferrer">10.1016/j.energy.2025.137350</a>
 				</td></tr>
 				<tr><td>
-					<i>Integrated Neural Network Framework for Multi-Object Detection and Recognition Using UAV Imagery.</i> Alshehri, M., Xue, T., Mujtaba, G., Alqahtani, Y., Almujally, N., Jalal, A.*, and Liu, H.* (co-first) (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
+					<i>Integrated Neural Network Framework for Multi-Object Detection and Recognition Using UAV Imagery.</i> Alshehri, M., Xue, T., Mujtaba, G., Alqahtani, Y., Almujally, N., Jalal, A.*, and Liu, H.* (co-first) (2025). Frontiers in Neurorobotics, 19:1643011. ISSN: 1662-5218.<br>
 					<a href="https://scholar.google.com/scholar?q=Integrated+Neural+Network+Framework+for+Multi-Object+Detection+and+Recognition+Using+UAV+Imagery" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Integrated-neural-network-framework-for-detection-Alshehri-Xue/2b0e0abfce197f662ff657f571967303558a950f" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/394102368_Integrated_neural_network_framework_for_multi-object_detection_and_recognition_using_UAV_imagery" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
